[gd_scene load_steps=6 format=3 uid="uid://5dcn0pmdlnq5"]

[ext_resource type="Script" path="res://scripts/Card.gd" id="1_ks73o"]
[ext_resource type="Texture2D" uid="uid://b2tqfgvck6pdl" path="res://resources/pixel-cards/card-frame-Slapstick.png" id="2_if0v1"]
[ext_resource type="FontFile" uid="uid://dmw35ibqh0v47" path="res://resources/Pixelme.ttf" id="2_l53m7"]
[ext_resource type="Texture2D" uid="uid://dnlq50ntuqneg" path="res://resources/pixel-cards/Slapstick-icon.png" id="4_7ta0o"]
[ext_resource type="Texture2D" uid="uid://btlkwmpidmo32" path="res://resources/pixel-cards/card-back.png" id="4_vw5x7"]

[node name="CardTemplate" type="MarginContainer"]
offset_right = 125.0
offset_bottom = 175.0
pivot_offset = Vector2(62.5, 87.5)
script = ExtResource("1_ks73o")

[node name="Card" type="Sprite2D" parent="."]

[node name="Border" type="Sprite2D" parent="."]
scale = Vector2(3.175, 3.25)
texture = ExtResource("2_if0v1")
centered = false

[node name="Bars" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TopGap" type="MarginContainer" parent="Bars"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Name" type="MarginContainer" parent="Bars"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/Name"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Bars/Name"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Bars/Name/CenterContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_l53m7")
theme_override_font_sizes/font_size = 8
text = "Physical Comedy 1"

[node name="TypeBar" type="HBoxContainer" parent="Bars"]
layout_mode = 2
alignment = 1

[node name="LeftGap" type="MarginContainer" parent="Bars/TypeBar"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="LeftIconBox" type="MarginContainer" parent="Bars/TypeBar"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/TypeBar/LeftIconBox"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Bars/TypeBar/LeftIconBox"]
layout_mode = 2

[node name="LeftIcon" type="Sprite2D" parent="Bars/TypeBar/LeftIconBox/CenterContainer"]
texture = ExtResource("4_7ta0o")
centered = false
offset = Vector2(-7, -1)

[node name="Type" type="MarginContainer" parent="Bars/TypeBar"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/TypeBar/Type"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Bars/TypeBar/Type"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="Bars/TypeBar/Type/CenterContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_l53m7")
theme_override_font_sizes/font_size = 8
text = "Physical Comedy"

[node name="RightIconBox" type="MarginContainer" parent="Bars/TypeBar"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/TypeBar/RightIconBox"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Bars/TypeBar/RightIconBox"]
layout_mode = 2

[node name="RightIcon" type="Sprite2D" parent="Bars/TypeBar/RightIconBox/CenterContainer"]
texture = ExtResource("4_7ta0o")
centered = false
offset = Vector2(-1, -1)

[node name="RigthtGap" type="MarginContainer" parent="Bars/TypeBar"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="MidGap" type="MarginContainer" parent="Bars"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="JokeBar" type="HBoxContainer" parent="Bars"]
layout_mode = 2

[node name="LeftGap" type="MarginContainer" parent="Bars/JokeBar"]
custom_minimum_size = Vector2(11, 0)
layout_mode = 2

[node name="JokeText" type="MarginContainer" parent="Bars/JokeBar"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/JokeBar/JokeText"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Bars/JokeBar/JokeText"]
layout_mode = 2

[node name="JokeLabel" type="Label" parent="Bars/JokeBar/JokeText/CenterContainer"]
custom_minimum_size = Vector2(97, 22)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_l53m7")
theme_override_font_sizes/font_size = 8
text = "This is the funniest joke
text you have ever seen"
autowrap_mode = 3

[node name="RigthtGap" type="MarginContainer" parent="Bars/JokeBar"]
custom_minimum_size = Vector2(11, 0)
layout_mode = 2

[node name="LowerGap" type="MarginContainer" parent="Bars"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="BottomBar" type="HBoxContainer" parent="Bars"]
layout_mode = 2

[node name="LeftGap" type="MarginContainer" parent="Bars/BottomBar"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2

[node name="CardNumber" type="MarginContainer" parent="Bars/BottomBar"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/BottomBar/CardNumber"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Bars/BottomBar/CardNumber"]
layout_mode = 2

[node name="CardNumber" type="Label" parent="Bars/BottomBar/CardNumber/CenterContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_l53m7")
theme_override_font_sizes/font_size = 8
text = "#0	"

[node name="MidGap" type="MarginContainer" parent="Bars/BottomBar"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3

[node name="PointValue" type="MarginContainer" parent="Bars/BottomBar"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/BottomBar/PointValue"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Bars/BottomBar/PointValue"]
layout_mode = 2

[node name="PointValue" type="Label" parent="Bars/BottomBar/PointValue/CenterContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_l53m7")
theme_override_font_sizes/font_size = 8
text = "1"

[node name="RightGap" type="MarginContainer" parent="Bars/BottomBar"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2

[node name="BottomGap" type="MarginContainer" parent="Bars"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="CardBack" type="Sprite2D" parent="."]
visible = false
scale = Vector2(3.125, 3.14286)
texture = ExtResource("4_vw5x7")
centered = false
